test/compile_errors/stage1/obj/function_with_invalid_return_type.zig
export fn foo() boid {}

// function with invalid return type
//
// tmp.zig:1:17: error: use of undeclared identifier 'boid'
